Fix overflowing layout center

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -22,8 +22,15 @@
     }
 
     &-center {
-        width: 100%;
-        flex-grow: 1;
-        flex-shrink: 1;
+        flex-grow: 0;
+        flex-shrink: 0;
+
+        @media (max-width: 1023px) {
+            width: 100%;
+        }
+
+        @media (min-width: 1024px) {
+            width: 60%;
+        }
     }
 }
